syntax = "proto2";
package ru.herobrine1st.e621.preference.proto;

message Proxy {
  required ProxyType type = 1;
  required string hostname = 2;
  required int32 port = 3 [default = -1]; // Default bc default instance is used to initialize dialog
  // OkHttp supports proxy selectors...
  optional bool enabled = 4 [default = true];
  optional ProxyAuth auth = 5;
}

message ProxyAuth {
  required string username = 1;
  required string password = 2;
}

enum ProxyType {
  SOCKS5 = 1;
}